--- a/Webpage_lykke/index.html
+++ b/Webpage_lykke/index.html
@@ -21,7 +21,7 @@
 								<span>Lykke</span>
 							</div>
 							<div class="Lcont_1_2 mobile_3">
-								<a class="button_1_2" href="https://wa.me/541133742780?text=Hola%2CQuiero%20consultar%20por%20tus%20Servicios"><ion-icon name="logo-whatsapp"></ion-icon><span>Consulta!</span></a>
+								<a class="button_1_2" href="https://wa.me/541133742780?text=Hola%2C%20Quiero%20consultar%20por%20tus%20Servicios"><ion-icon name="logo-whatsapp"></ion-icon><span>Consulta!</span></a>
 							</div>
 							
 				</div>
@@ -69,7 +69,7 @@
 								<ion-icon name="chatbubble-ellipses-outline"></ion-icon>
 							</div>
 							<div class="btn_1_CTA_wa">
-								<a href="https://wa.me/541133742780?text=Hola%2CQuiero%20consultar%20por%20tus%20Servicios">Pulsa aqui</a>
+								<a href="https://wa.me/541133742780?text=Hola%2C%20Quiero%20consultar%20por%20tus%20Servicios">Pulsa aqui</a>
 							</div>
 						</section>
 						<section class="media_2 hidden">photo</section>
@@ -83,7 +83,7 @@
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-					<li><a href="https://wa.me/541133742780?text=Hola%2CQuiero%20consultar%20por%20tus%20Servicios"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+					<li><a href="https://wa.me/541133742780?text=Hola%2C%20Quiero%20consultar%20por%20tus%20Servicios"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
 					<li><a href="https://www.instagram.com/lykke.cc?igsh=MWgwaDYwcDh2eWh2eA=="><ion-icon name="logo-instagram"></ion-icon></a></li>
 				</ul>
 				<div class="copyright">
