--- a/Webpage_lykke/index.html
+++ b/Webpage_lykke/index.html
@@ -42,7 +42,7 @@
 						</div>
 				</header>
 				<div class="content dark style1 featured flexed">
-					<section class="media_1">photo</section>
+					<section class="media_1"><img src="images/Image_1.png"></img></section>
 					<section class="caption_1">
 						<div class="title_3 title_bg title_md">
 							<h1>Tu contenido en linea</h1>
